# vita-gprof

./: CMakeLists.txt  LICENSE  README.md
src/: mcount.s  prof.c  vitaprof.h
test/: CMakeLists.txt  main.c
